--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "d3": "^7.8.5",
-    "next": "14.0.4",
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -19,9 +19,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "latest",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "latest",
     "postcss": "^8",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
