--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "d3": "^7.8.5",
+    "d3": "latest",
     "next": "latest",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.3",
+    "@types/d3": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
